--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
     
 
     <div class="article-content">
-      <p>Welcome to my humbly made website.  My name is Zachary Everts and I&rsquo;m a sports media communication and broadcasting double major at the University of Nebraska_Lincoln. This website is where I store my best journalistic pieces that I&rsquo;ve created.</p>
+      <p>Welcome to my humbly made website.  My name is Zachary Everts and I&rsquo;m a sports media communication and broadcasting double major at the University of Nebraska-Lincoln. This website is where I store the best journalistic pieces that I&rsquo;ve created.</p>
 
     </div>
   </article>
